[gd_scene load_steps=3 format=3 uid="uid://mgkoph22rqi0"]

[ext_resource type="Script" path="res://Scripts/enemy_kill_zone.gd" id="1_hym26"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ryjsu"]
size = Vector2(12, 16)

[node name="EnemyKillZone" type="Area2D"]
collision_mask = 2
script = ExtResource("1_hym26")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ryjsu")

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
